refactor(stm32g0): refactor Lights animation to use color themes

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -40,6 +40,9 @@ SRC  =  \
             ir_remote.cpp  \
         )  \
         $(addprefix animation/,  \
+            $(addprefix tools/,  \
+                color_themes.cpp  \
+            )  \
             color.cpp  \
             rainbow.cpp  \
             retro.cpp  \
